--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   border: 1px solid black;
   margin: 50px;
   border-radius: 20px;
+  height: 200px;
 }
 
 .container h1 {
@@ -16,4 +17,13 @@
   font-weight: bold;
   color: white;
   margin: 20px;
+}
+
+.container a {
+  background-color: rgb(15, 15, 13);
+  color: white;
+  padding: 10px;
+  margin: 20px;
+  text-decoration: none;
+  border-radius: 20px;
 }
